# Multigrid

./: .gitignore  README.md
src/: CMakeLists.txt  ConjugateGradient.h  Field.cpp  Field.h  GaussSeidel.cpp  GaussSeidel.h  MG.cpp  MG.h  dirac.cpp  dirac.h  main.cpp  mesh.cpp  mesh.h  utils.h
src/lib/eigen-3.4.0/Eigen/src/IterativeLinearSolvers/: ConjugateGradient.h
